# mipt_hackathon_travelline

./: README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
backend/database/: docx_to_txt_converter.py  embedding_creator.py  query_from_database.py
data/: embeddings.db
docs/: Как гость может изменить бронирование с сайта.docx  Как изменить тариф в бронировании с сайта.docx  Как переселить бронирование в шахматке 2.docx  Как создать групповую бронь в шахматке TL.docx  Найти пропавшую в шахматке бронь.docx  Почему бронь в строке без номера.docx
docs_txt/: #0#_Как гость может изменить бронирование с сайта.txt  #12#_Как создать промокод.txt  #13#_Как создать тариф с ограничением проживание минимум два дня.txt  #17#_Почему бронь в строке без номера.txt  #4#_Как настроить двухфакторную аутентификацию через мобильное приложение.txt  #7#_Как переселить гостя в шахматке.txt  #8#_Как поставить цены в тарифе.txt  Как добавить фотографии номера.txt  Как отменить бронь из шахматки.txt  Как переселить бронирование в шахматке 2.txt  Как прикрепить файл с описанием отеля к ваучеру подтверждения бронирования.txt  Как работает способ оплаты «Оплата частями» через сервис ЮKassa.txt  Как создать групповую бронь в шахматке TL.txt  Как создать услугу завтрак в личном кабинете Трэвел Лайн.txt  Найти пропавшую в шахматке бронь.txt  Отложенная электронная оплата по ссылке для шахматки TL WebPMS.txt  Почему овербукинг перепродажа в системе.txt  Чтобы создать анкету о качестве обслуживания в системе управления отелем TravelLine.txt
(+99 files in other folders)
